# pcs-web-ui

./: .babelrc.json  .cluster-test-conf-gitlab.sh  .editorconfig  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierrc.js  AI-policy.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  Makefile.am  README.md  biome.json  cluster-test-conf.default.json  config-overrides.js  configure.ac  jest.config-headed.js  jest.config.js  jsconfig.json  package-lock.json  package.json  plans.fmf  tests.fmf  tsconfig.json  typos.toml
.bin/: build-cockpit.sh  build.js  build.sh  bump-version.js  bump-version.sh  check-assumptions.sh  check-no-nexus.sh  check-std-npm-registry.sh  config.sh  dev-backend.sh  dev-server.sh  get-build-sizes.sh  get-cluster-tests-config.ts  init.sh  init_nexus.sh  init_registry.sh  install.sh  lint.sh  npm_install.sh  patch-node-modules-for-fips.sh  pcs-compatibility-add.js  pcs-compatibility-export.js  pcs-compatibility.json  pre-commit.sh  render-spec.sh  run-cluster-tests.sh  run-dev-tests.sh  run-jest.sh  run-tests.sh  set_npm_registry.sh  start-dev-server.sh  start.js  tools.sh  typecheck.sh
.bin/config/: env.js  paths.js  paths.json  webpack.config.js  webpackDevServer.config.js
.bin/pre-commit/: check-all.sh  check-format.sh  check-lint.sh  check-makefile-file-listing.sh  normalize-npm-registry.sh  pre-commit.sh  remove-nexus.sh
.githooks/: pre-commit
cockpit/@types/Cockpit/: index.d.ts
config/: env.js  getHttpsConfig.js  modules.js  paths.js  paths.json  webpack.config.js  webpackDevServer.config.js
config/webpack/persistentCache/: createEnvironmentHash.js
dev/: backend.js  dashboard-add-cluster.js  dashboard.js  scenario-default.js  scenario-from-tests.js  state.js
dev/scenarios/: dashboard-add-cluster.js  dashboard.js  login.js
doc/: pcs-compatibility.md
docs/: CONTRIBUTING.md  README.md  architecture.md  architecture_backend.md  architecture_dev.md  architecture_store.md  architecture_view.md  dependencies.md  pcs-compatibility.md  testing.md
m4/: pcs_pkg_check_var.m4
public/: index.html  manifestCockpit.json
public/ui/: assets
rpm/: pcs-web-ui.spec.in
scripts/: build.js  cleanupMessages.js  start.js
src/: App.js  index.js  index.tsx  react-app-env.d.ts
src/__test__/acceptance/: login.test.js
src/__tests__/: bootstrap.js
src/__tests__/acceptance/: sample-replay.js  sample-response.js  sample.spec.js
src/__tests__/integration/: login.js
src/app/: App.js  App.test.js  components.js  utils.js  utils.ts
src/app/actions/: auth.ts  cluster.ts  clusterProperties.ts  dashboard-add-cluster.ts  dashboard.ts  fence-agent.ts  index.ts  login.ts  notifications.ts  resource-agent.ts  resource-detail.ts  resource-primitive.ts  resource-tree.ts  setupDataReading.ts  username.ts
src/app/backend/: api.ts  apiLib.ts  apiResult.ts  authGuiAgainstNodes.ts  call.ts  calls.ts  checkAuthAgainstNodes.ts  clusterStatus.ts  clusterStatusTypes.ts  clustersOverview.ts  errors.ts  existingCluster.ts  getResourceAgentMetadata.ts  http.ts  importedClusterList.ts  index.ts  lib.ts  log.ts  tools.ts  types.ts  updateResource.ts  validate.ts
src/app/common/: types.ts  urls.ts
src/app/components/: BackgroundImage.js  Breadcrumbs.js  Breadcrumbs.tsx  ClusterNavigation.js  ClusterNavigation.tsx  ClusterNavigationItem.js  ClusterPage.js  ClusterPage.tsx  DataLoadingPage.js  InlineAlert.js  InlineAlert.tsx  LabelWithIcon.js  LoadPageProblem.js  PageHeader.js  PageHeader.tsx  PageSectionDataLoading.js  PageSectionDataLoading.tsx  PageToolbar.js  PageToolbar.tsx  Spinner.css  Spinner.js  Spinner.tsx  StatusIco.js  StatusIco.tsx  StatusSign.js  StatusSign.tsx  TopMenu.js  index.js  pallete.js  pallete.ts
src/app/core/: api.js  api.ts  apiTypes.ts  plug-tools.js  plug-tools.ts  plug.ts  plug.tsx  plugins.js  reducers.js  rootState.ts  routerPlugin.js  routerReducer.js  sagas.js  selectors.ts  store.js  store.ts  types.ts
src/app/scenes/: App.css  App.tsx  AppPage.tsx  index.ts  wizardKeys.ts
src/app/services/: api.js
src/app/store/: exportTypes.ts  index.ts  redux.ts  rootState.ts  selectors.ts  store.ts  taskTools.ts  tools.ts  types.ts  url.ts  utils.ts
src/app/test/: bootstrap.js  scenarios.js  store.js  tools.js
src/app/view/: App.css  App.tsx  AppPage.tsx  AppRouter.tsx  AttributeHelpPopover.tsx  BackgroundImage.tsx  ClusterSectionToolbar.tsx  CrmStatusTable.tsx  FilterGroups.tsx  IsueList.tsx  NVPairListView.tsx  Page.tsx  PageHeader.tsx  PageSectionDataLoading.tsx  PageToolbar.tsx  ResourceStatusInfoListSigns.tsx  Scratch.tsx  Select.tsx  SelectedClusterContext.ts  StatusIco.tsx  StatusSign.tsx  UtilizationView.tsx  compareStatusSeverity.ts  index.ts  tabRoutes.ts  useClusterSelector.ts  useClusterState.ts  useUsername.ts  utils.ts
src/components/: DataLoadingPage.js  TopMenu.js
src/components/cluster/: ClusterDataPage.js  ClusterPageContent.js  DetailsMenu.js  PageContent.js
src/dev/: app.ts  backend.js  prompt.ts  shortcuts.ts  types.ts
src/dev/api/: endpoints.js
src/dev/responses/: acl.ts  clusterProperties.ts  fenceAgentMetadata.ts  importedClusterList.ts  index.ts  lib.ts  permissions.ts  resourceAgentList.ts  resourceAgentListWithoutDescribe.ts  stonithAgentListWithoutDescribe.ts
src/dev/scenarios/: acl.ts  cluster-fix-auth-fail.ts  cluster-fix-auth.ts  cluster-no-auth-nodes.ts  cluster-node-actions.js  cluster-node-actions.ts  cluster-node-add.ts  cluster-resource-actions.js  cluster-resource-create.js  cluster-resource-create.ts  cluster-resource-update-instance-attrs.ts  cluster-start-stop.ts  cluster-stopped.ts  cluster-update-properties.ts  constraints-create.ts  constraints.ts  dashboard-add-cluster.js  dashboard-add-cluster.ts  dashboard-destroy-cluster.ts  dashboard-remove-cluster.ts  dashboard-setup-cluster.ts  dashboard.js  dashboard.ts  fence-device-create.ts  fence-device-update-arguments.ts  login.js  login.ts  node-actions.ts  node-add.ts  permissions.ts  proxy.ts  resource-actions.ts  resource-create.ts  (+6 more)
src/services/: api.js  reducers.js  sagas.js  store.js
src/test/: bootstrap.js  jest-preset.ts
(+2528 files in other folders)
